@@ -1,3 +1,12 @@
+2004-07-19  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
+
+	* config/obj-som.c (adjust_stab_sections): Add prototype.
+	(obj_som_compiler, obj_som_version, obj_som_copyright,
+	adjust_stab_sections): Add ATTRIBUTE_UNUSED to unused arguments.
+	* config/tc-hppa.c (update_subspace):  Likewise.
+	(is_defined_subspace): Amplify comment.
+	* config/obj-som.h (som_frob_file): Add prototype.
+
 2004-07-19  Christopher Faylor  <cgf@timesys.com>
 	    H.J. Lu  <hongjiu.lu@intel.com>
 
